codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__gpt_thread_model_picker_disables_deepseek.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Choose a model in the same family as this thread's initial model.

›    deepseek-flash (disabled)  Open-weight model served by a DeepSeek-
                                compatible endpoint. (disabled: Unavailable
                                because this thread started with `gpt-5.5`.)

  Press enter to confirm or esc to go back
